--- a/frontend/src-tauri/Cargo.toml
+++ b/frontend/src-tauri/Cargo.toml
@@ -22,3 +22,7 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 tokio = { version = "1.47.1", features = ["full"] }
 ai = { path = "../../ai" }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
+dotenvy = "0.15"
